--- a/src/Restoran/Views/Meni/Index.cshtml
+++ b/src/Restoran/Views/Meni/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Kolicina)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TipMenija.Id)
+                @Html.DisplayFor(modelItem => item.TipMenija.Naziv)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
