Edit Views and Home page.

--- a/src/Restoran/Views/Home/Index.cshtml
+++ b/src/Restoran/Views/Home/Index.cshtml
@@ -2,7 +2,19 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center" style="padding:150px 0px 400px 0px">
+    <div style="
+    font-size: 80px;
+    letter-spacing: 4.2px;
+    word-spacing: 2.4px;
+    color: #FFFFFF;
+    font-weight: 700;
+    text-decoration: none solid rgb(68, 68, 68);
+    font-style: italic;
+    font-variant: normal;
+    text-transform: uppercase;
+    margin-bottom:70px;">Dobrodošli</div>
+    <h6>
+        <a class="btn btn-outline-light" asp-action="Create" asp-controller="Narudzba">Započni novu narudžbu</a>
+    </h6>
 </div>
