--- a/src/Restoran/Views/Narudzba/Index.cshtml
+++ b/src/Restoran/Views/Narudzba/Index.cshtml
@@ -1,62 +1,66 @@
 ﻿@model IEnumerable<Restoran.Models.Narudzba>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Narudžba";
 }
 
 <h1>Pregled narudžbi</h1>
+<a class="btn btn-primary" asp-action="Create" style="margin-bottom:20px; margin-top:20px;">Započni novu narudžbu</a>
 
+@if (Model.Count() > 0)
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Broj stola
+                </th>
+                <th>
+                    Radnik
+                </th>
+                <th>
+                    Vrijeme kreiranja
+                </th>
+                <th>
+                    Vrijeme završetka
+                </th>
+                <th>
+                    Ukupna cijena
+                </th>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Sto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Zaposleni)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VrijemeKreiranja)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VrijemeZavrsetka)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cijena)
-            </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Sto.BrojStola)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Zaposleni.Ime) @Html.DisplayFor(modelItem => item.Zaposleni.Prezime)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.VrijemeKreiranja)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.VrijemeZavrsetka)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cijena)
+                    </td>
 
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sto.BrojStola)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Zaposleni.Ime) @Html.DisplayFor(modelItem => item.Zaposleni.Prezime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VrijemeKreiranja)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VrijemeZavrsetka)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cijena)
-            </td>
-
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+                    <td>
+                        <a href="@Url.Action("Index","Spisakzanarudzbu", new { narudzbaId = item.Id})">Detalji narudžbe</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
-    </tbody>
-</table>
-<p>
-    <a class="btn btn-primary" asp-action="Create">Započni novu narudžbu</a>
-</p>
+else
+{
+    <p>Trenutno ne postoji ni jedna narudžba</p>
+}
+
