--- a/src/Restoran/Views/Rezervacija/Delete.cshtml
+++ b/src/Restoran/Views/Rezervacija/Delete.cshtml
@@ -4,15 +4,13 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h2>Jeste li sigurni da želite da obrišete?</h2>
 <div>
     <h4>Rezervacija</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PodaciGosta)
+            Podaci o gostu
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PodaciGosta)
@@ -24,25 +22,25 @@
             @Html.DisplayFor(model => model.Datum)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VrijemeOd)
+            Vrijeme rezervacije
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.VrijemeOd)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VrijemeDo)
+            Vrijeme važenja
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.VrijemeDo)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BrojOsoba)
+            Broj osoba
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.BrojOsoba)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sto)
+            Broj stola
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Sto.Id)
@@ -51,7 +49,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Obriši" class="btn btn-danger" /> |
+        <a asp-action="Index">Odustani</a>
     </form>
 </div>
