--- a/src/Restoran/Views/Rezervacija/Details.cshtml
+++ b/src/Restoran/Views/Rezervacija/Details.cshtml
@@ -4,51 +4,50 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h2>Detalji rezervacije</h2>
 
 <div>
-    <h4>Rezervacija</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PodaciGosta)
+        <dt class="col-sm-2">
+            Podaci o gostu
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PodaciGosta)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Datum)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Datum)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VrijemeOd)
+        <dt class="col-sm-2">
+            Vrijeme rezervacije
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.VrijemeOd)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VrijemeDo)
+        <dt class="col-sm-2">
+            Vrijeme važenja
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.VrijemeDo)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BrojOsoba)
+        <dt class="col-sm-2">
+            Broj osoba
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.BrojOsoba)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sto)
+        <dt class="col-sm-2">
+            Broj stola
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Sto.Id)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Izmijeni</a> |
+    <a asp-action="Index">Nazad na listu</a>
 </div>
