--- a/src/Restoran/Views/Spisakzanarudzbu/Cart.cshtml
+++ b/src/Restoran/Views/Spisakzanarudzbu/Cart.cshtml
@@ -1,39 +1,70 @@
 ﻿@model IEnumerable<Restoran.Models.Spisakzanarudzbu>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Meni)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Kolicina)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cijena)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Meni.Naziv)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Kolicina)
-            </td>
-            <td>
-                @ViewBag.Cijena
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
+@{
+    ViewData["Title"] = "Narudžba / Dodaj";
 }
-    </tbody>
-</table>
-<a class="btn btn-outline-primary" href="@Url.Action("Create","Spisakzanarudzbu", new { narudzbaId = ViewBag.NarudzbaId })">Dodaj</a>
+
+@if (Model.Count() > 0)
+{
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Meni)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Kolicina)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Cijena)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Meni.Naziv)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Kolicina)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cijena) KM
+                    </td>
+                    <td>
+                        <a class="btn btn-sm btn-danger" 
+                           href="@Url.Action("RemoveNarudzba", "Spisakzanarudzbu", new { narudzbaId = item.NarudzbaId, meniId = item.MeniId })"
+                           title="Ukloni iz narudžbe" onclick="return confirm('Da li sigurni da želite da uklonite?');">
+                           Ukloni
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <p>Narudžba je prazna</p>
+}
+<div class="row align-items-center">
+    <div class="col-7">
+        <a class="btn btn-primary" 
+           href="@Url.Action("Create","Spisakzanarudzbu", new { narudzbaId = ViewBag.NarudzbaId })">Dodaj sa menija</a>
+
+        @if (ViewBag.brojElemenata != 0)
+        {
+            <a class="btn btn-outline-success" href="@Url.Action("Finish","Spisakzanarudzbu", new { narudzbaId = ViewBag.NarudzbaId})">Završi narudžbu</a>
+        }
+
+        <a class="btn btn-outline-danger" href="@Url.Action("Discard","Spisakzanarudzbu", new { narudzbaId = ViewBag.NarudzbaId})"
+           onclick="return confirm('Da li sigurni da želite da odustanete od narudžbe?');">Odustani od narudžbe</a>
+    </div>
+    <div class="col-5">
+        <a style="font-size: 1.25rem; color: #9c27b0;"><strong>Ukupno: </strong> @ViewBag.Cijena KM</a>
+    </div>
+</div>
