--- a/src/Restoran/Views/Zaposleni/Index.cshtml
+++ b/src/Restoran/Views/Zaposleni/Index.cshtml
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Adresa)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Grad.Id)
+                @Html.DisplayFor(modelItem => item.Grad.Naziv)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
